--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
 
 before_script:
   - psql -c 'create database  waiter-db;' -U postgres
-  - psql -U postgres -d waiter-db -a -f registration-db.sql
+  - psql -U postgres -d waiter-db -a -f waiter-table.sql
 
 addons:
     apt:
