--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 
 env:
-  - DATABASE_URL=postgresql://postgres@localhost:5432/waiter-db
+  - DATABASE_URL=postgresql://postgres@localhost:5432/waiter_db
 
 node_js:  
   - "8.11.4"
 
 before_script:
-  - psql -c 'create database  waiter-db;' -U postgres
-  - psql -U postgres -d waiter-db -a -f waiter-table.sql
+  - psql -c 'create database  waiter_db;' -U postgres
+  - psql -U postgres -d waiter_db -a -f waiter-table.sql
 
 addons:
     apt:
